# goat

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  goat.pro  snapcraft.yaml
libs/qscintilla/Qt4Qt5/: qscilexersql.cpp
packaging/: goat.desktop
resources/: data.qrc  icons.qrc  resources.qrc  sql.ini
resources/syntax-highlight/: sql.ini
src/: AboutDialog.cpp  AboutDialog.ui  AbstractQuery.cpp  AbstractQuery.h  CodeEditor.cpp  CodeEditor.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionManagerDialog.cpp  ConnectionManagerDialog.h  ConnectionManagerDialog.ui  ConnectionTab.cpp  ConnectionTab.h  ConnectionWidget.cpp  ConnectionWidget.ui  Csv.cpp  Csv.h  DataFormatter.cpp  DataFormatter.h  ExportQueryDialog.cpp  ExportQueryDialog.ui  Highlighter.cpp  Highlighter.h  MainWindow.cpp  MainWindow.h  NewConnectionDialog.cpp  NewConnectionDialog.h  Query.cpp  Query.h  QueryExporter.cpp  QueryExporter.h  QueryManager.cpp  QueryManager.h  QueryStopper.cpp  QueryStopper.h  QueryTab.h  Row.h  RowSet.h  (+9 more)
src/core/: ConnectionManager.h  ConnectionStandardItem.cpp  ConnectionStandardItem.h
src/ui/: CodeEditor.cpp  CodeEditor.h  ConnectionManagerDialog.cpp  ConnectionManagerDialog.h  ConnectionManagerDialog.ui  ConnectionTab.cpp  ExtendedScintilla.cpp  FindReplaceDialog.h  Highlighter.cpp  MainWindow.cpp  MainWindow.h
test/: TestStringUtils.cpp  TestStringUtils.h  test_main.cpp
ui/: AboutDialog.cpp  AboutDialog.ui  CodeEditor.cpp  CodeEditor.h  ConnectionDialog.cpp  ConnectionDialog.h  ConnectionDialog.ui  ConnectionManagerDialog.cpp  ConnectionManagerDialog.h  ConnectionManagerDialog.ui  ConnectionTab.cpp  ConnectionTab.h  ConnectionTab.ui  ConnectionWidget.cpp  ConnectionWidget.h  ConnectionWidget.ui  ExportQueryDialog.cpp  ExportQueryDialog.h  ExportQueryDialog.ui  Highlighter.cpp  Highlighter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewConnectionDialog.ui  QueryTab.cpp  QueryTab.h  QueryTab.ui  TableView.cpp  TableView.h
